[package]
name = "esp-ota"
version = "0.1.0"
edition = "2021"

# This is extremely important! OTA and running firmware should be compiled with the same partition table
[package.metadata.espflash]
partition_table = "partitions.csv"

[dependencies]
embedded-svc = { version = "0.24.0" }
esp-idf-hal = "0.40.1"
esp-idf-svc = { version = "0.45.0", features = ["experimental", "alloc", "std", "nightly"] }
esp-idf-sys = { version = "0.32.1", features = ["binstart"] }
log = "0.4.17"
thiserror = "1.0.32"

[build-dependencies]
anyhow = "1.0.68"
embuild = "0.31.0"

[profile.release]
opt-level = "s"

[features]
embedded = []